Setting entity manager to persist.